@@ -95,7 +95,10 @@
 
 			{block name="rtticketadd-content"}
 			{box_row icon="message" label="Content:" icon_class="fa-fw"}
-				<TEXTAREA name="ticket[body]" cols="50" rows="5" {tip text="Enter ticket content" trigger="body"}>{$ticket.body}</TEXTAREA>
+				<TEXTAREA name="ticket[body]" cols="50" rows="5"
+					{tip class="lms-ui-wysiwyg-editor" text="Enter ticket content" trigger="body"}
+					{if isset($ticket.wysiwyg.body)} data-wysiwyg="{$ticket.wysiwyg.body}"{/if}
+					>{$ticket.body}</TEXTAREA>
 			{/box_row}
 			{/block}
 
@@ -347,7 +350,12 @@
 				return;
 			}
 			$('[name="ticket[subject]"]').val(Base64.decode(selected.attr('data-subject')));
-			$($(this).attr('data-target')).val(Base64.decode(selected.attr('data-message')));
+
+			var message = Base64.decode(selected.attr('data-message'));
+			if (tinyMCE.editors.length) {
+				tinyMCE.editors[0].setContent(message);
+			}
+			$($(this).attr('data-target')).val(message);
 		});
 
 		initListQuickSearch({
